--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>640</width>
-    <height>455</height>
+    <width>451</width>
+    <height>582</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -27,74 +27,37 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="hierachicalLabel">
-        <property name="text">
-         <string>&amp;Hierachical</string>
-        </property>
-        <property name="buddy">
-         <cstring>hierachicalCheckBox</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QCheckBox" name="hierachicalCheckBox">
-        <property name="checked">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="iconSizeLabel">
-        <property name="text">
-         <string>Icon &amp;Size:</string>
-        </property>
-        <property name="buddy">
-         <cstring>iconSizeSpinBox</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QSpinBox" name="iconSizeSpinBox">
-        <property name="minimum">
-         <number>8</number>
-        </property>
-        <property name="maximum">
-         <number>128</number>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="filterLabel">
-        <property name="text">
-         <string>&amp;Filter:</string>
-        </property>
-        <property name="buddy">
-         <cstring>filterLineEdit</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="QLineEdit" name="filterLineEdit">
-        <property name="placeholderText">
-         <string>Filter Icons...</string>
-        </property>
-        <property name="clearButtonEnabled">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
       <item row="0" column="1">
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
          <widget class="QComboBox" name="currentThemeComboBox">
+          <property name="toolTip">
+           <string>Select the theme to display icons for</string>
+          </property>
           <property name="editable">
-           <bool>true</bool>
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QToolButton" name="searchIconsButton">
+          <property name="toolTip">
+           <string>Scan for more icons by scanning all available themes for possible icon names</string>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset theme="search">
+            <normaloff>.</normaloff>.</iconset>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QToolButton" name="addPathButton">
+          <property name="toolTip">
+           <string>Add a new path to the theme search path</string>
+          </property>
           <property name="text">
            <string>...</string>
           </property>
@@ -106,21 +69,85 @@
         </item>
        </layout>
       </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="iconSizeLabel">
+        <property name="text">
+         <string>Icon &amp;Size:</string>
+        </property>
+        <property name="buddy">
+         <cstring>iconSizeSpinBox</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QSpinBox" name="iconSizeSpinBox">
+        <property name="toolTip">
+         <string>Sets the preview size of the icons</string>
+        </property>
+        <property name="minimum">
+         <number>8</number>
+        </property>
+        <property name="maximum">
+         <number>128</number>
+        </property>
+        <property name="value">
+         <number>16</number>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="filterLabel">
+        <property name="text">
+         <string>&amp;Filter:</string>
+        </property>
+        <property name="buddy">
+         <cstring>filterLineEdit</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QLineEdit" name="filterLineEdit">
+        <property name="toolTip">
+         <string>Search for an icon. You can use the standard Wildcard syntax</string>
+        </property>
+        <property name="placeholderText">
+         <string>Filter Icons...</string>
+        </property>
+        <property name="clearButtonEnabled">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
     <item>
-     <widget class="QTreeWidget" name="treeWidget">
+     <widget class="QTreeWidget" name="iconTreeView">
       <property name="editTriggers">
        <set>QAbstractItemView::NoEditTriggers</set>
       </property>
       <property name="alternatingRowColors">
        <bool>true</bool>
       </property>
+      <property name="iconSize">
+       <size>
+        <width>16</width>
+        <height>16</height>
+       </size>
+      </property>
+      <property name="rootIsDecorated">
+       <bool>false</bool>
+      </property>
+      <property name="itemsExpandable">
+       <bool>false</bool>
+      </property>
       <property name="sortingEnabled">
        <bool>true</bool>
       </property>
       <property name="animated">
        <bool>true</bool>
+      </property>
+      <property name="expandsOnDoubleClick">
+       <bool>false</bool>
       </property>
       <column>
        <property name="text">
@@ -136,7 +163,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>640</width>
+     <width>451</width>
      <height>23</height>
     </rect>
    </property>
