--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -10,9 +10,6 @@
     <height>582</height>
    </rect>
   </property>
-  <property name="windowTitle">
-   <string>MainWindow</string>
-  </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
@@ -44,13 +41,6 @@
           <property name="toolTip">
            <string>Scan for more icons by scanning all available themes for possible icon names</string>
           </property>
-          <property name="text">
-           <string>...</string>
-          </property>
-          <property name="icon">
-           <iconset theme="search">
-            <normaloff>.</normaloff>.</iconset>
-          </property>
          </widget>
         </item>
         <item>
@@ -58,12 +48,8 @@
           <property name="toolTip">
            <string>Add a new path to the theme search path</string>
           </property>
-          <property name="text">
-           <string>...</string>
-          </property>
-          <property name="icon">
-           <iconset theme="list-add">
-            <normaloff>.</normaloff>.</iconset>
+          <property name="popupMode">
+           <enum>QToolButton::MenuButtonPopup</enum>
           </property>
          </widget>
         </item>
@@ -174,10 +160,14 @@
   <widget class="QStatusBar" name="statusBar"/>
   <action name="action_Copy_Icon_Name">
    <property name="icon">
-    <iconset theme="edit-copy"/>
+    <iconset theme="edit-copy">
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>&amp;Copy Icon/Name</string>
+   </property>
+   <property name="toolTip">
+    <string>Copyboth, the icon and it's name</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+C</string>
@@ -187,10 +177,49 @@
    <property name="text">
     <string>Copy &amp;Name</string>
    </property>
+   <property name="toolTip">
+    <string>Copy the icon's name</string>
+   </property>
   </action>
   <action name="actionCopy_Icon">
    <property name="text">
     <string>Copy &amp;Icon</string>
+   </property>
+   <property name="toolTip">
+    <string>Copy the icon</string>
+   </property>
+  </action>
+  <action name="action_Scan_for_more_icons">
+   <property name="icon">
+    <iconset theme="edit-find"/>
+   </property>
+   <property name="text">
+    <string>&amp;Scan for more icons</string>
+   </property>
+   <property name="toolTip">
+    <string>Scan for more icons by scanning all available themes for possible icon names</string>
+   </property>
+  </action>
+  <action name="actionAdd_theme_path">
+   <property name="icon">
+    <iconset theme="list-add"/>
+   </property>
+   <property name="text">
+    <string>Add &amp;theme path</string>
+   </property>
+   <property name="toolTip">
+    <string>Add a new path to the theme search path</string>
+   </property>
+  </action>
+  <action name="actionEdit_theme_paths">
+   <property name="icon">
+    <iconset theme="story-editor"/>
+   </property>
+   <property name="text">
+    <string>&amp;Edit theme paths</string>
+   </property>
+   <property name="toolTip">
+    <string>Shows a list with all active theme paths and allows to remove them</string>
    </property>
   </action>
  </widget>
