--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -10,6 +10,9 @@
     <height>582</height>
    </rect>
   </property>
+  <property name="mouseTracking">
+   <bool>true</bool>
+  </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
@@ -105,6 +108,9 @@
     </item>
     <item>
      <widget class="QTreeWidget" name="iconTreeView">
+      <property name="mouseTracking">
+       <bool>true</bool>
+      </property>
       <property name="contextMenuPolicy">
        <enum>Qt::ActionsContextMenu</enum>
       </property>
@@ -271,6 +277,22 @@
    </property>
    <property name="text">
     <string>Match Exactly</string>
+   </property>
+  </action>
+  <action name="actionZoomIn">
+   <property name="text">
+    <string>ZoomIn</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl++</string>
+   </property>
+  </action>
+  <action name="actionZoomOut">
+   <property name="text">
+    <string>ZoomOut</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+-</string>
    </property>
   </action>
  </widget>
